index.css
@font-face {
  font-family: "Young Serif";
  src: url("/assets/fonts/young-serif/YoungSerif-Regular.ttf");
}

@font-face {
  font-family: "Outfit";
  src: url("/assets/fonts/outfit/Outfit-VariableFont_wght.ttf");
}

body {
  background-color: hsl(30, 54%, 90%);
  margin: 0;
  padding: 0;
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 25px;
  color: hsl(30,
    10%,
    34%);
}

h1 {
  font-size: 2.5rem;
  font-family: "Young Serif", sans-serif;
  font-weight: 400;
  color: hsl(24, 5%, 18%);
}

h2 {
  color: hsl(14,
    45%,
    36%);
  font-family: "Young Serif", sans-serif;
  font-size: 2rem;
  font-weight: 400;
  margin: 20px;
}

h3 {
  color: hsl(332,
    51%,
    32%);
  font-family: "Outfit", sans-serif;
  font-size: 1.3rem;
  font-weight: 700;
  margin: 0;
}

.card {
  background-color: white;
  border-radius: 20px;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
  margin: 10% auto;
  padding: 40px;
  width: 45%;
}

.card img {
  border-radius: 20px;
  height: 100%;
  width: 100%;
}

.prep-card {
  background-color: hsl(330, 100%, 98%);
  border-radius: 20px;
  padding: 20px;
  margin: 30px;
}

ol {
  line-height: 25px;
}

ul {
  line-height: 30px;
  
}

hr {
  margin-top: 30px;
  margin-bottom: 30px;
  border-top: 1px solid hsl(30, 54%, 90%);
}

li::marker {
  color: hsl(14, 45%, 36%);
}

table, tr {
  height: 50px;
}

.border-none {
  border-collapse: collapse;
  border: none;
}

.border-none td {
  border: 1px solid hsl(30, 54%, 90%);
  width: 500px;
}

.border-none tr:first-child td {
  border-top: none;
}

.border-none tr:last-child td {
  border-bottom: none;
}

.border-none tr td:first-child {
  border-left: none;
  border-right: none;
}

.border-none tr td:last-child {
  border-right: none;
  border-left: none;
}

.border-none td:last-child {
  color: hsl(14,
      45%,
      36%);
  font-weight: 700;
}

